Primeros cambios en el contenido y traducciones al español

--- a/contact.html
+++ b/contact.html
@@ -223,7 +223,7 @@
         </div><!-- .container ends -->
 
         <div class="time-location__map"><iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2934.500392314035!2d-73.76198333429348!3d42.650750424686215!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89de0a3cdc54f8b3%3A0x369f717b85d43cfc!2sMadison%20Ave%20%26%20Empire%20State%20Plaza!5e0!3m2!1sen!2sus!4v1583133727681!5m2!1sen!2sus"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7743.437086630143!2d-89.56317718504171!3d13.97535152365951!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f62e937acee99e5%3A0x729a22fb4b488678!2sTaller%20San%20Cristobals!5e0!3m2!1sen!2sus!4v1652658661540!5m2!1sen!2sus"
             style="border:0;" allowfullscreen=""></iframe></div>
 
 
