--- a/staffs-single.html
+++ b/staffs-single.html
@@ -47,91 +47,91 @@
             </button>
           </div>
 
-          <ul class="header__navitems show-on-lg" id="mobile-menu">
+            <ul class="header__navitems show-on-lg" id="mobile-menu">
 
-            <!-- Contains donation button for mobile and tablet devices -->
-            <li class="header__extra">
-              <div class="cta">
-                <a href="donations.html" class="button button-block-sm">Donate</a>
-              </div>
-            </li><!-- .header__extra ends -->
+                <!-- Contains donation button for mobile and tablet devices -->
+                <li class="header__extra">
+                    <div class="cta">
+                        <a href="donations.html" class="button button-block-sm">Donación</a>
+                    </div>
+                </li><!-- .header__extra ends -->
 
-            <li class="header__list"><a href="index.html">Home</a></li>
-            <!-- .header__list ends -->
+                <li class="header__list active"><a href="index.html">Home</a></li>
+                <!-- .header__list ends -->
 
-            <li class="header__list"><a href="about.html">About</a></li><!-- .header__list ends -->
+                <li class="header__list"><a href="about.html">Conocenos</a></li><!-- .header__list ends -->
 
-            <li class="header__list">
-              <a href="" class="dropdown-link">Sermons</a>
+                <li class="header__list">
+                    <a href="" class="dropdown-link">Sermones</a>
 
-              <div class="header__submenu">
-                <ul>
+                    <div class="header__submenu">
+                        <ul>
 
-                  <li class="header__list"><a href="sermons.html">Sermons</a></li>
-                  <li class="header__list"><a href="sermons-single.html">Sermons single</a></li>
+                            <li class="header__list"><a href="sermons.html">Sermones</a></li>
+                            <li class="header__list"><a href="sermons-single.html">Sermones individuales</a></li>
 
-                </ul>
+                        </ul>
 
-              </div><!-- .header__submenu ends -->
-            </li><!-- .header__list ends -->
+                    </div><!-- .header__submenu ends -->
+                </li><!-- .header__list ends -->
 
-            <li class="header__list">
-              <a href="" class="dropdown-link">Ministries</a>
+                <li class="header__list">
+                    <a href="" class="dropdown-link">Ministerios</a>
 
-              <div class="header__submenu">
-                <ul>
+                    <div class="header__submenu">
+                        <ul>
 
-                  <li class="header__list"><a href="ministries.html">Ministries</a></li>
-                  <li class="header__list"><a href="ministries-single.html">Ministries single</a></li>
+                            <li class="header__list"><a href="ministries.html">Ministerios</a></li>
+                            <li class="header__list"><a href="ministries-single.html">Detalle de Ministerios</a></li>
 
-                </ul>
-              </div><!-- .header__submenu ends -->
-            </li><!-- .header__list ends -->
+                        </ul>
+                    </div><!-- .header__submenu ends -->
+                </li><!-- .header__list ends -->
 
-            <li class="header__list">
-              <a href="" class="dropdown-link">Events</a>
+                <li class="header__list">
+                    <a href="" class="dropdown-link">Eventos</a>
 
-              <div class="header__submenu">
-                <ul>
+                    <div class="header__submenu">
+                        <ul>
 
-                  <li class="header__list"><a href="events.html">Events</a></li>
-                  <li class="header__list"><a href="events-single.html">Events single</a></li>
+                            <li class="header__list"><a href="events.html">Eventos</a></li>
+                            <li class="header__list"><a href="events-single.html">Eventos individuales</a></li>
 
-                </ul>
-              </div><!-- .header__submenu ends -->
-            </li><!-- .header__list ends -->
+                        </ul>
+                    </div><!-- .header__submenu ends -->
+                </li><!-- .header__list ends -->
 
-            <li class="header__list active">
-              <a href="" class="dropdown-link">Pages</a>
+                <li class="header__list">
+                    <a href="" class="dropdown-link">Paginas</a>
 
-              <div class="header__submenu">
-                <ul>
+                    <div class="header__submenu">
+                        <ul>
 
-                  <li class="header__list"><a href="donations.html">Donations</a></li>
-                  <li class="header__list active"><a href="staffs-single.html">Staffs single</a></li>
-                  <li class="header__list"><a href="elements.html">Elements</a></li>
+                            <li class="header__list"><a href="donations.html">Donaciones</a></li>
+                            <li class="header__list"><a href="staffs-single.html">Lideres</a></li>
+                            <!--                  <li class="header__list"><a href="elements.html">Elements</a></li>-->
 
-                </ul>
-              </div><!-- .header__submenu ends -->
-            </li><!-- .header__list ends -->
+                        </ul>
+                    </div><!-- .header__submenu ends -->
+                </li><!-- .header__list ends -->
 
-            <li class="header__list">
-              <a href="" class="dropdown-link">Blog</a>
+                <!--            <li class="header__list">-->
+                <!--              <a href="" class="dropdown-link">Blog</a>-->
 
-              <div class="header__submenu">
-                <ul>
+                <!--              <div class="header__submenu">-->
+                <!--                <ul>-->
 
-                  <li class="header__list"><a href="blog.html">Blog list</a></li>
-                  <li class="header__list"><a href="blog-single.html">Blog single</a></li>
+                <!--                  <li class="header__list"><a href="blog.html">Blog list</a></li>-->
+                <!--                  <li class="header__list"><a href="blog-single.html">Blog single</a></li>-->
 
-                </ul>
-              </div><!-- .header__submenu ends -->
-            </li><!-- .header__list ends -->
+                <!--                </ul>-->
+                <!--              </div>&lt;!&ndash; .header__submenu ends &ndash;&gt;-->
+                <!--            </li>&lt;!&ndash; .header__list ends &ndash;&gt;-->
 
-            <li class="header__list"><a href="contact.html">Contact</a></li>
-            <!-- .header__list ends -->
+                <li class="header__list"><a href="contact.html">Contacto</a></li>
+                <!-- .header__list ends -->
 
-          </ul><!-- .header__navitems ends -->
+            </ul><!-- .header__navitems ends -->
 
           <!-- Contains Shopping cart and donation button -->
           <div class="header__extra desktop-version">
@@ -283,7 +283,7 @@
         </div><!-- .container ends -->
 
         <div class="time-location__map"><iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2934.500392314035!2d-73.76198333429348!3d42.650750424686215!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89de0a3cdc54f8b3%3A0x369f717b85d43cfc!2sMadison%20Ave%20%26%20Empire%20State%20Plaza!5e0!3m2!1sen!2sus!4v1583133727681!5m2!1sen!2sus"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7743.437086630143!2d-89.56317718504171!3d13.97535152365951!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f62e937acee99e5%3A0x729a22fb4b488678!2sTaller%20San%20Cristobals!5e0!3m2!1sen!2sus!4v1652658661540!5m2!1sen!2sus"
             style="border:0;" allowfullscreen=""></iframe></div>
 
 
