--- a/elements.html
+++ b/elements.html
@@ -47,91 +47,91 @@
             </button>
           </div>
 
-          <ul class="header__navitems show-on-lg" id="mobile-menu">
+            <ul class="header__navitems show-on-lg" id="mobile-menu">
 
-            <!-- Contains donation button for mobile and tablet devices -->
-            <li class="header__extra">
-              <div class="cta">
-                <a href="donations.html" class="button button-block-sm">Donate</a>
-              </div>
-            </li><!-- .header__extra ends -->
+                <!-- Contains donation button for mobile and tablet devices -->
+                <li class="header__extra">
+                    <div class="cta">
+                        <a href="donations.html" class="button button-block-sm">Donación</a>
+                    </div>
+                </li><!-- .header__extra ends -->
 
-            <li class="header__list"><a href="index.html">Home</a></li>
-            <!-- .header__list ends -->
+                <li class="header__list active"><a href="index.html">Home</a></li>
+                <!-- .header__list ends -->
 
-            <li class="header__list"><a href="about.html">About</a></li><!-- .header__list ends -->
+                <li class="header__list"><a href="about.html">Conocenos</a></li><!-- .header__list ends -->
 
-            <li class="header__list">
-              <a href="" class="dropdown-link">Sermons</a>
+                <li class="header__list">
+                    <a href="" class="dropdown-link">Sermones</a>
 
-              <div class="header__submenu">
-                <ul>
+                    <div class="header__submenu">
+                        <ul>
 
-                  <li class="header__list"><a href="sermons.html">Sermons</a></li>
-                  <li class="header__list"><a href="sermons-single.html">Sermons single</a></li>
+                            <li class="header__list"><a href="sermons.html">Sermones</a></li>
+                            <li class="header__list"><a href="sermons-single.html">Sermones individuales</a></li>
 
-                </ul>
+                        </ul>
 
-              </div><!-- .header__submenu ends -->
-            </li><!-- .header__list ends -->
+                    </div><!-- .header__submenu ends -->
+                </li><!-- .header__list ends -->
 
-            <li class="header__list">
-              <a href="" class="dropdown-link">Ministries</a>
+                <li class="header__list">
+                    <a href="" class="dropdown-link">Ministerios</a>
 
-              <div class="header__submenu">
-                <ul>
+                    <div class="header__submenu">
+                        <ul>
 
-                  <li class="header__list"><a href="ministries.html">Ministries</a></li>
-                  <li class="header__list"><a href="ministries-single.html">Ministries single</a></li>
+                            <li class="header__list"><a href="ministries.html">Ministerios</a></li>
+                            <li class="header__list"><a href="ministries-single.html">Detalle de Ministerios</a></li>
 
-                </ul>
-              </div><!-- .header__submenu ends -->
-            </li><!-- .header__list ends -->
+                        </ul>
+                    </div><!-- .header__submenu ends -->
+                </li><!-- .header__list ends -->
 
-            <li class="header__list">
-              <a href="" class="dropdown-link">Events</a>
+                <li class="header__list">
+                    <a href="" class="dropdown-link">Eventos</a>
 
-              <div class="header__submenu">
-                <ul>
+                    <div class="header__submenu">
+                        <ul>
 
-                  <li class="header__list"><a href="events.html">Events</a></li>
-                  <li class="header__list"><a href="events-single.html">Events single</a></li>
+                            <li class="header__list"><a href="events.html">Eventos</a></li>
+                            <li class="header__list"><a href="events-single.html">Eventos individuales</a></li>
 
-                </ul>
-              </div><!-- .header__submenu ends -->
-            </li><!-- .header__list ends -->
+                        </ul>
+                    </div><!-- .header__submenu ends -->
+                </li><!-- .header__list ends -->
 
-            <li class="header__list active">
-              <a href="" class="dropdown-link">Pages</a>
+                <li class="header__list">
+                    <a href="" class="dropdown-link">Paginas</a>
 
-              <div class="header__submenu">
-                <ul>
+                    <div class="header__submenu">
+                        <ul>
 
-                  <li class="header__list"><a href="donations.html">Donations</a></li>
-                  <li class="header__list"><a href="staffs-single.html">Staffs single</a></li>
-                  <li class="header__list active"><a href="elements.html">Elements</a></li>
+                            <li class="header__list"><a href="donations.html">Donaciones</a></li>
+                            <li class="header__list"><a href="staffs-single.html">Lideres</a></li>
+                            <!--                  <li class="header__list"><a href="elements.html">Elements</a></li>-->
 
-                </ul>
-              </div><!-- .header__submenu ends -->
-            </li><!-- .header__list ends -->
+                        </ul>
+                    </div><!-- .header__submenu ends -->
+                </li><!-- .header__list ends -->
 
-            <li class="header__list">
-              <a href="" class="dropdown-link">Blog</a>
+                <!--            <li class="header__list">-->
+                <!--              <a href="" class="dropdown-link">Blog</a>-->
 
-              <div class="header__submenu">
-                <ul>
+                <!--              <div class="header__submenu">-->
+                <!--                <ul>-->
 
-                  <li class="header__list"><a href="blog.html">Blog list</a></li>
-                  <li class="header__list"><a href="blog-single.html">Blog single</a></li>
+                <!--                  <li class="header__list"><a href="blog.html">Blog list</a></li>-->
+                <!--                  <li class="header__list"><a href="blog-single.html">Blog single</a></li>-->
 
-                </ul>
-              </div><!-- .header__submenu ends -->
-            </li><!-- .header__list ends -->
+                <!--                </ul>-->
+                <!--              </div>&lt;!&ndash; .header__submenu ends &ndash;&gt;-->
+                <!--            </li>&lt;!&ndash; .header__list ends &ndash;&gt;-->
 
-            <li class="header__list"><a href="contact.html">Contact</a></li>
-            <!-- .header__list ends -->
+                <li class="header__list"><a href="contact.html">Contacto</a></li>
+                <!-- .header__list ends -->
 
-          </ul><!-- .header__navitems ends -->
+            </ul><!-- .header__navitems ends -->
 
           <!-- Contains Shopping cart and donation button -->
           <div class="header__extra desktop-version">
