--- a/donations.html
+++ b/donations.html
@@ -199,7 +199,7 @@
                 </div>
 
                 <div class="donations__message">
-                    <h3>Transferencia Banaria</h3>
+                    <h3>Transferencia Bancaria</h3>
                 </div>
 
                 <div class="donations__message">
