--- a/blog-single.html
+++ b/blog-single.html
@@ -194,7 +194,7 @@
               <div class="single__content">
 
                 <div class="card single__featured--image no-padding">
-                  <img src="images/single.jpg" alt="A man praying" class="card__image">
+                  <img src="images/single.jpeg" alt="A man praying" class="card__image">
                 </div><!-- .card ends -->
 
                 <div class="single__metas blog-single__metas">
