--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
                     <div class="card ministry">
 
                         <div class="card__header">
-                            <img src="images/ministry-1@1.5x.jpg" alt="Un Hombre sosteniendo y leyendo la biblia"
+                            <img src="images/ministry-1@1.5x.jpeg" alt="Un Hombre sosteniendo y leyendo la biblia"
                                  class="card__image ministry__image">
                         </div><!-- .card__header ends -->
 
