--- a/ministries.html
+++ b/ministries.html
@@ -242,7 +242,7 @@
                 <div class="card ministry">
 
                   <div class="card__header">
-                    <img src="images/ministry-1@1.5x.jpg" alt="A man holding and reading the Holy Bible"
+                    <img src="images/ministry-1@1.5x.jpeg" alt="A man holding and reading the Holy Bible"
                       class="card__image ministry__image">
                   </div><!-- .card__header ends -->
 
