--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,7 @@
     <!-- Place Custom Favicon here -->
     <link rel="shortcut icon" href="images/favicon.png" type="image/png">
 
+      <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 
   </head>
 
@@ -28,124 +29,21 @@
     <!-- =================== SITE HEADER BEGINS ============================= -->
 
     <header class="header transparent fixed light-text" data-onscroll-classes="dark-text white-bg"
-      data-onscroll-logo="images/logo-dark.png">
+            data-onscroll-logo="images/logo-dark.svg">
 
-      <div class="container">
+        <div class="container">
+            <div id="nav-placeholder">
 
-        <nav class="header__nav bottom-nav">
-
-          <div class="header__logo brand--logo">
-            <a href="index.html"><img src="images/logo-light.png" alt="Greater Love Church"></a>
-          </div>
-
-          <div class="header__mobile--opener hide-on-lg">
-            <button class="header__mobile--icon" aria-expanded="false" aria-controls="mobile-menu"
-              data-toggle="mobile-menu">
-              <span class="line"></span>
-              <span class="line"></span>
-              <span class="line"></span>
-            </button>
-          </div>
-
-          <ul class="header__navitems show-on-lg" id="mobile-menu">
-
-            <!-- Contains donation button for mobile and tablet devices -->
-            <li class="header__extra">
-              <div class="cta">
-                <a href="donations.html" class="button button-block-sm">Donate</a>
-              </div>
-            </li><!-- .header__extra ends -->
-
-            <li class="header__list"><a href="index.html">Home</a></li>
-            <!-- .header__list ends -->
-
-            <li class="header__list"><a href="about.html">About</a></li><!-- .header__list ends -->
-
-            <li class="header__list">
-              <a href="" class="dropdown-link">Sermons</a>
-
-              <div class="header__submenu">
-                <ul>
-
-                  <li class="header__list"><a href="sermons.html">Sermons</a></li>
-                  <li class="header__list"><a href="sermons-single.html">Sermons single</a></li>
-
-                </ul>
-
-              </div><!-- .header__submenu ends -->
-            </li><!-- .header__list ends -->
-
-            <li class="header__list">
-              <a href="" class="dropdown-link">Ministries</a>
-
-              <div class="header__submenu">
-                <ul>
-
-                  <li class="header__list"><a href="ministries.html">Ministries</a></li>
-                  <li class="header__list"><a href="ministries-single.html">Ministries single</a></li>
-
-                </ul>
-              </div><!-- .header__submenu ends -->
-            </li><!-- .header__list ends -->
-
-            <li class="header__list">
-              <a href="" class="dropdown-link">Events</a>
-
-              <div class="header__submenu">
-                <ul>
-
-                  <li class="header__list"><a href="events.html">Events</a></li>
-                  <li class="header__list"><a href="events-single.html">Events single</a></li>
-
-                </ul>
-              </div><!-- .header__submenu ends -->
-            </li><!-- .header__list ends -->
-
-            <li class="header__list">
-              <a href="" class="dropdown-link">Pages</a>
-
-              <div class="header__submenu">
-                <ul>
-
-                  <li class="header__list"><a href="donations.html">Donations</a></li>
-                  <li class="header__list"><a href="staffs-single.html">Staffs single</a></li>
-                  <li class="header__list"><a href="elements.html">Elements</a></li>
-
-                </ul>
-              </div><!-- .header__submenu ends -->
-            </li><!-- .header__list ends -->
-
-            <li class="header__list">
-              <a href="" class="dropdown-link">Blog</a>
-
-              <div class="header__submenu">
-                <ul>
-
-                  <li class="header__list"><a href="blog.html">Blog list</a></li>
-                  <li class="header__list"><a href="blog-single.html">Blog single</a></li>
-
-                </ul>
-              </div><!-- .header__submenu ends -->
-            </li><!-- .header__list ends -->
-
-            <li class="header__list active"><a href="contact.html">Contact</a></li>
-            <!-- .header__list ends -->
-
-          </ul><!-- .header__navitems ends -->
-
-          <!-- Contains Shopping cart and donation button -->
-          <div class="header__extra desktop-version">
-            <div class="cta hide-on-sm show-on-lg">
-              <a href="donations.html" class="button">Donate</a>
-            </div>
-          </div><!-- .header__extra ends -->
-
-        </nav><!-- .header__nav ends -->
-
-      </div><!-- .container ends -->
+            </div><!-- .container ends -->
+        </div><!-- .container ends -->
 
     </header><!-- .header ends -->
 
+    <script>
+        $.get("nav-bar.html", function(data){
+            $("#nav-placeholder").replaceWith(data);
+        });
+    </script>
     <!-- =================== SITE HEADER ENDS ============================= -->
 
 
