--- a/elements.html
+++ b/elements.html
@@ -29,7 +29,7 @@
     <!-- =================== SITE HEADER BEGINS ============================= -->
 
     <header class="header transparent fixed light-text" data-onscroll-classes="dark-text white-bg"
-            data-onscroll-logo="images/logo-dark.svg">
+            data-onscroll-logo="images/logo-dark-cr.svg">
 
         <div class="container">
             <div id="nav-placeholder">
@@ -121,7 +121,7 @@
               <nav class="header__nav bottom-nav">
 
                 <div class="header__logo brand--logo">
-                  <a href=""><img src="images/logo-dark.png" alt="Greater Love Church"></a>
+                  <a href=""><img src="images/logo-dark-cr.webp" alt="Greater Love Church"></a>
                 </div>
 
                 <div class="header__mobile--opener hide-on-lg">
