--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <!-- =================== SITE HEADER BEGINS ============================= -->
 
 <header class="header transparent fixed light-text" data-onscroll-classes="dark-text white-bg"
-        data-onscroll-logo="images/logo-dark.svg">
+        data-onscroll-logo="images/logo-dark-cr.svg">
 
     <div class="container">
         <div id="nav-placeholder">
