--- a/nav-bar.html
+++ b/nav-bar.html
@@ -2,7 +2,7 @@
 
     <div class="header__logo brand--logo">
         <br>
-        <a href="index.html"><img src="images/logo-light.svg" alt="Greater Love Church"></a>
+        <a href="index.html"><img src="images/logo-light-cr.svg" alt="Greater Love Church"></a>
     </div>
 
     <div class="header__mobile--opener hide-on-lg">
