--- a/nav-bar.html
+++ b/nav-bar.html
@@ -1,110 +1,117 @@
-<nav class="header__nav bottom-nav">
+<header class="header transparent fixed light-text" data-onscroll-classes="dark-text white-bg"
+        data-onscroll-logo="images/logo-dark-cr.svg">
 
-    <div class="header__logo brand--logo">
-        <br>
-        <a href="index.html"><img src="images/logo-light-cr.svg" alt="Greater Love Church"></a>
-    </div>
+    <div class="container">
+        <nav class="header__nav bottom-nav">
 
-    <div class="header__mobile--opener hide-on-lg">
-        <button class="header__mobile--icon" aria-expanded="false" aria-controls="mobile-menu"
-                data-toggle="mobile-menu">
-            <span class="line"></span>
-            <span class="line"></span>
-            <span class="line"></span>
-        </button>
-    </div>
-
-    <ul class="header__navitems show-on-lg" id="mobile-menu">
-
-        <!-- Contains donation button for mobile and tablet devices -->
-        <li class="header__extra">
-            <div class="cta">
-                <a href="donations.html" class="button button-block-sm">Donación</a>
+            <div class="header__logo brand--logo">
+                <br>
+                <a href="index.html"><img src="images/logo-light-cr.svg" alt="Greater Love Church"></a>
             </div>
-        </li><!-- .header__extra ends -->
 
-        <li class="header__list active"><a href="index.html">Home</a></li>
-        <!-- .header__list ends -->
+            <div class="header__mobile--opener hide-on-lg">
+                <button class="header__mobile--icon" aria-expanded="false" aria-controls="mobile-menu"
+                        data-toggle="mobile-menu">
+                    <span class="line"></span>
+                    <span class="line"></span>
+                    <span class="line"></span>
+                </button>
+            </div>
 
-        <li class="header__list"><a href="about.html">Conocenos</a></li><!-- .header__list ends -->
+            <ul class="header__navitems show-on-lg" id="mobile-menu">
 
-        <li class="header__list">
-            <a href="" class="dropdown-link">Sermones</a>
+                <!-- Contains donation button for mobile and tablet devices -->
+                <li class="header__extra">
+                    <div class="cta">
+                        <a href="donations.html" class="button button-block-sm">Donación</a>
+                    </div>
+                </li><!-- .header__extra ends -->
 
-            <div class="header__submenu">
-                <ul>
+                <li class="header__list active"><a href="index.html">Home</a></li>
+                <!-- .header__list ends -->
 
-                    <li class="header__list"><a href="sermons.html">Sermones</a></li>
-                    <li class="header__list"><a href="sermons-single.html">Sermones individuales</a></li>
+                <li class="header__list"><a href="about.html">Conocenos</a></li><!-- .header__list ends -->
 
-                </ul>
+                <li class="header__list">
+                    <a href="" class="dropdown-link">Sermones</a>
 
-            </div><!-- .header__submenu ends -->
-        </li><!-- .header__list ends -->
+                    <div class="header__submenu">
+                        <ul>
 
-        <li class="header__list">
-            <a href="" class="dropdown-link">Ministerios</a>
+                            <li class="header__list"><a href="sermons.html">Sermones</a></li>
+                            <li class="header__list"><a href="sermons-single.html">Sermones individuales</a></li>
 
-            <div class="header__submenu">
-                <ul>
+                        </ul>
 
-                    <li class="header__list"><a href="ministries.html">Ministerios</a></li>
-                    <li class="header__list"><a href="ministries-single.html">Detalle de Ministerios</a></li>
+                    </div><!-- .header__submenu ends -->
+                </li><!-- .header__list ends -->
 
-                </ul>
-            </div><!-- .header__submenu ends -->
-        </li><!-- .header__list ends -->
+                <li class="header__list">
+                    <a href="" class="dropdown-link">Ministerios</a>
 
-        <li class="header__list">
-            <a href="" class="dropdown-link">Eventos</a>
+                    <div class="header__submenu">
+                        <ul>
 
-            <div class="header__submenu">
-                <ul>
+                            <li class="header__list"><a href="ministries.html">Ministerios</a></li>
+                            <li class="header__list"><a href="ministries-single.html">Detalle de Ministerios</a></li>
 
-                    <li class="header__list"><a href="events.html">Eventos</a></li>
-                    <li class="header__list"><a href="events-single.html">Eventos individuales</a></li>
+                        </ul>
+                    </div><!-- .header__submenu ends -->
+                </li><!-- .header__list ends -->
 
-                </ul>
-            </div><!-- .header__submenu ends -->
-        </li><!-- .header__list ends -->
+                <li class="header__list">
+                    <a href="" class="dropdown-link">Eventos</a>
 
-        <li class="header__list">
-            <a href="" class="dropdown-link">Paginas</a>
+                    <div class="header__submenu">
+                        <ul>
 
-            <div class="header__submenu">
-                <ul>
+                            <li class="header__list"><a href="events.html">Eventos</a></li>
+                            <li class="header__list"><a href="events-single.html">Eventos individuales</a></li>
 
-                    <li class="header__list"><a href="donations.html">Donaciones</a></li>
-                    <li class="header__list"><a href="staffs-single.html">Lideres</a></li>
-                    <!--                  <li class="header__list"><a href="elements.html">Elements</a></li>-->
+                        </ul>
+                    </div><!-- .header__submenu ends -->
+                </li><!-- .header__list ends -->
 
-                </ul>
-            </div><!-- .header__submenu ends -->
-        </li><!-- .header__list ends -->
+                <li class="header__list">
+                    <a href="" class="dropdown-link">Paginas</a>
 
-        <!--            <li class="header__list">-->
-        <!--              <a href="" class="dropdown-link">Blog</a>-->
+                    <div class="header__submenu">
+                        <ul>
 
-        <!--              <div class="header__submenu">-->
-        <!--                <ul>-->
+                            <li class="header__list"><a href="donations.html">Donaciones</a></li>
+                            <li class="header__list"><a href="staffs-single.html">Lideres</a></li>
+                            <!--                  <li class="header__list"><a href="elements.html">Elements</a></li>-->
 
-        <!--                  <li class="header__list"><a href="blog.html">Blog list</a></li>-->
-        <!--                  <li class="header__list"><a href="blog-single.html">Blog single</a></li>-->
+                        </ul>
+                    </div><!-- .header__submenu ends -->
+                </li><!-- .header__list ends -->
 
-        <!--                </ul>-->
-        <!--              </div>&lt;!&ndash; .header__submenu ends &ndash;&gt;-->
-        <!--            </li>&lt;!&ndash; .header__list ends &ndash;&gt;-->
+                <!--            <li class="header__list">-->
+                <!--              <a href="" class="dropdown-link">Blog</a>-->
 
-        <li class="header__list"><a href="contact.html">Contacto</a></li>
-        <!-- .header__list ends -->
+                <!--              <div class="header__submenu">-->
+                <!--                <ul>-->
 
-    </ul><!-- .header__navitems ends -->
+                <!--                  <li class="header__list"><a href="blog.html">Blog list</a></li>-->
+                <!--                  <li class="header__list"><a href="blog-single.html">Blog single</a></li>-->
 
-    <!-- Contains Shopping cart and donation button -->
-    <div class="header__extra desktop-version">
-        <div class="cta hide-on-sm show-on-lg">
-            <a href="donations.html" class="button">Donación</a>
-        </div>
-    </div><!-- .header__extra ends -->
+                <!--                </ul>-->
+                <!--              </div>&lt;!&ndash; .header__submenu ends &ndash;&gt;-->
+                <!--            </li>&lt;!&ndash; .header__list ends &ndash;&gt;-->
 
-</nav><!-- .header__nav ends -->
+                <li class="header__list"><a href="contact.html">Contacto</a></li>
+                <!-- .header__list ends -->
+
+            </ul><!-- .header__navitems ends -->
+
+            <!-- Contains Shopping cart and donation button -->
+            <div class="header__extra desktop-version">
+                <div class="cta hide-on-sm show-on-lg">
+                    <a href="donations.html" class="button">Donación</a>
+                </div>
+            </div><!-- .header__extra ends -->
+
+        </nav><!-- .header__nav ends -->
+    </div><!-- .container ends -->
+
+</header><!-- .header ends -->
