Actualizando logos de sitio y loader

--- a/blog.html
+++ b/blog.html
@@ -14,7 +14,7 @@
     <title>Blog | Greater Love Church</title>
 
     <!-- Place Custom Favicon here -->
-    <link rel="shortcut icon" href="images/favicon.png" type="image/png">
+    <link rel="shortcut icon" href="images/favicon-cr.png" type="image/png">
 
       <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 
