--- a/donations.html
+++ b/donations.html
@@ -86,27 +86,28 @@
             <form action="#" class="form donations__form">
 
                 <div class="donations__amount">
-                    <h2>Donaciones desde El Salvador</h2>
+                    <h1>Donaciones desde El Salvador</h1>
                 </div>
 
                 <div class="donations__message">
                     <h3>Transferencia Bancaria</h3>
                 </div>
 
-                <div class="donations__message">
-                    <h4>Banco: America Central (BAC)</h4>
+                <div class="donations__message__flex">
+                    <div id="firstDivistion" class="division"><h3>Banco: America Central (BAC)</h3></div>
+                    <div id="secondDivistion" class="division"><img src="images/Bac_credomatic_logo.svg" width="80" height="40" alt=""></div>
                 </div>
 
                 <div class="donations__message">
-                    <h4>A nombre de: Iglesia Comunidad Cristiana Ciudadanos del Reino</h4>
+                    <h3>A nombre de: Iglesia Comunidad Cristiana Ciudadanos del Reino</h3>
                 </div>
 
                 <div class="donations__message">
-                    <h4>N° Cuenta: 201332038</h4>
+                    <h3>N° Cuenta: 201332038</h3>
                 </div>
                 <br><br>
                 <div class="donations__amount">
-                    <h2>Donaciones desde USA - Resto del mundo</h2>
+                    <h1>Donaciones desde USA - Resto del mundo</h1>
                 </div>
 
                 <div class="donations__message">
