--- a/nav-bar.html
+++ b/nav-bar.html
@@ -59,32 +59,32 @@
                     </div><!-- .header__submenu ends -->
                 </li><!-- .header__list ends -->
 
-                <li class="header__list">
-                    <a href="" class="dropdown-link">Eventos</a>
+<!--                <li class="header__list">-->
+<!--                    <a href="" class="dropdown-link">Eventos</a>-->
 
-                    <div class="header__submenu">
-                        <ul>
+<!--                    <div class="header__submenu">-->
+<!--                        <ul>-->
 
-                            <li class="header__list"><a href="events.html">Eventos</a></li>
-                            <li class="header__list"><a href="events-single.html">Eventos individuales</a></li>
+<!--                            <li class="header__list"><a href="events.html">Eventos</a></li>-->
+<!--                            <li class="header__list"><a href="events-single.html">Eventos individuales</a></li>-->
 
-                        </ul>
-                    </div><!-- .header__submenu ends -->
-                </li><!-- .header__list ends -->
+<!--                        </ul>-->
+<!--                    </div>&lt;!&ndash; .header__submenu ends &ndash;&gt;-->
+<!--                </li>&lt;!&ndash; .header__list ends &ndash;&gt;-->
 
-                <li class="header__list">
-                    <a href="" class="dropdown-link">Paginas</a>
+<!--                <li class="header__list">-->
+<!--                    <a href="" class="dropdown-link">Paginas</a>-->
 
-                    <div class="header__submenu">
-                        <ul>
+<!--                    <div class="header__submenu">-->
+<!--                        <ul>-->
 
-                            <li class="header__list"><a href="donations.html">Donaciones</a></li>
-                            <li class="header__list"><a href="staffs-single.html">Lideres</a></li>
-                            <!--                  <li class="header__list"><a href="elements.html">Elements</a></li>-->
+<!--                            <li class="header__list"><a href="donations.html">Donaciones</a></li>-->
+<!--                            <li class="header__list"><a href="staffs-single.html">Lideres</a></li>-->
+<!--                            &lt;!&ndash;                  <li class="header__list"><a href="elements.html">Elements</a></li>&ndash;&gt;-->
 
-                        </ul>
-                    </div><!-- .header__submenu ends -->
-                </li><!-- .header__list ends -->
+<!--                        </ul>-->
+<!--                    </div>&lt;!&ndash; .header__submenu ends &ndash;&gt;-->
+<!--                </li>&lt;!&ndash; .header__list ends &ndash;&gt;-->
 
                 <!--            <li class="header__list">-->
                 <!--              <a href="" class="dropdown-link">Blog</a>-->
