cambio de imagenes

--- a/donations.html
+++ b/donations.html
@@ -45,7 +45,7 @@
 <main>
 
     <!-- BANNER SECTION STARTS -->
-    <section class="banner full-width">
+    <section class="banner-donation full-width">
 
         <div class="container">
 
