--- a/ministries-single.html
+++ b/ministries-single.html
@@ -169,8 +169,8 @@
                   <div class="card custom-height ministry">
 
                     <div class="card__header">
-                      <img src="images/ministry-2@1.5x.jpg" alt="A man holding and reading the Holy Bible"
-                        class="card__image ministry__image">
+                      <img src="images/ministry-wommens.webp" alt="A man holding and reading the Holy Bible"
+                           class="card__image ministry__image">
                     </div><!-- .card__header ends -->
 
                     <div class="card__footer">
