--- a/ministries.html
+++ b/ministries.html
@@ -193,7 +193,7 @@
                 <div class="card ministry">
 
                   <div class="card__header">
-                    <img src="images/ministry-2@1.5x.jpg" alt="Young women praying" class="card__image ministry__image">
+                    <img src="images/ministry-wommens.webp" alt="Young women praying" class="card__image ministry__image">
                   </div><!-- .card__header ends -->
 
                   <div class="card__footer">
