--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
                             <div class="card ministry custom-height">
 
                                 <div class="card__header">
-                                    <img src="images/ministry-2@1.5x.jpg" alt="Young women praying"
+                                    <img src="images/ministry-wommens.webp" alt="Young women praying"
                                          class="card__image ministry__image">
                                 </div><!-- .card__header ends -->
 
