--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                             <div class="card ministry custom-height">
 
                                 <div class="card__header">
-                                    <img src="images/ministry-3@1.5x.jpg"
+                                    <img src="images/ministry-3@1.5x.webp"
                                          alt="A little boy laughing while reading the Holy Bible"
                                          class="card__image ministry__image">
                                 </div><!-- .card__header ends -->
