--- a/ministries-single.html
+++ b/ministries-single.html
@@ -195,7 +195,7 @@
                   <div class="card custom-height ministry">
 
                     <div class="card__header">
-                      <img src="images/ministry-3@1.5x.jpg" alt="A little boy laughing while reading the Holy Bible"
+                      <img src="images/ministry-3@1.5x.webp" alt="A little boy laughing while reading the Holy Bible"
                         class="card__image ministry__image">
                     </div><!-- .card__header ends -->
 
