--- a/ministries.html
+++ b/ministries.html
@@ -163,7 +163,7 @@
                 <div class="card ministry">
 
                   <div class="card__header">
-                    <img src="images/ministry-3@1.5x.jpg" alt="A little boy laughing while reading the Holy Bible"
+                    <img src="images/ministry-3@1.5x.webp" alt="A little boy laughing while reading the Holy Bible"
                       class="card__image ministry__image">
                   </div><!-- .card__header ends -->
 
@@ -222,7 +222,7 @@
                 <div class="card ministry">
 
                   <div class="card__header">
-                    <img src="images/ministry-4@1.5x.jpg" alt="Church event" class="card__image ministry__image">
+                    <img src="images/ministry-4@1.5x.webp" alt="Church event" class="card__image ministry__image">
                   </div><!-- .card__header ends -->
 
                   <div class="card__footer">
