--- a/elements.html
+++ b/elements.html
@@ -313,7 +313,7 @@
               <div class="card ministry">
 
                 <div class="card__header">
-                  <img src="images/ministry-4@1.5x.jpg" alt="Church event" class="card__image ministry__image">
+                  <img src="images/ministry-4@1.5x.webp" alt="Church event" class="card__image ministry__image">
                 </div><!-- .card__header ends -->
 
                 <div class="card__footer">
