Actualizacion en ministerios

--- a/nav-bar.html
+++ b/nav-bar.html
@@ -32,32 +32,36 @@
 
                 <li class="header__list"><a href="about.html">Conocenos</a></li><!-- .header__list ends -->
 
-                <li class="header__list">
-                    <a href="" class="dropdown-link">Sermones</a>
+                <li class="header__list"><a href="sermons.html">Sermones</a></li><!-- .header__list ends -->
 
-                    <div class="header__submenu">
-                        <ul>
+<!--                <li class="header__list">-->
+<!--                    <a href="" class="dropdown-link">Sermones</a>-->
 
-                            <li class="header__list"><a href="sermons.html">Sermones</a></li>
-                            <li class="header__list"><a href="sermons-single.html">Sermones individuales</a></li>
+<!--                    <div class="header__submenu">-->
+<!--                        <ul>-->
 
-                        </ul>
+<!--                            <li class="header__list"><a href="sermons.html">Sermones</a></li>-->
+<!--                            <li class="header__list"><a href="sermons-single.html">Sermones individuales</a></li>-->
 
-                    </div><!-- .header__submenu ends -->
-                </li><!-- .header__list ends -->
+<!--                        </ul>-->
 
-                <li class="header__list">
-                    <a href="" class="dropdown-link">Ministerios</a>
+<!--                    </div>&lt;!&ndash; .header__submenu ends &ndash;&gt;-->
+<!--                </li>&lt;!&ndash; .header__list ends &ndash;&gt;-->
 
-                    <div class="header__submenu">
-                        <ul>
+                <li class="header__list"><a href="ministries.html">Ministerios</a></li><!-- .header__list ends -->
 
-                            <li class="header__list"><a href="ministries.html">Ministerios</a></li>
-                            <li class="header__list"><a href="ministries-single.html">Detalle de Ministerios</a></li>
+<!--                <li class="header__list">-->
+<!--                    <a href="" class="dropdown-link">Ministerios</a>-->
 
-                        </ul>
-                    </div><!-- .header__submenu ends -->
-                </li><!-- .header__list ends -->
+<!--                    <div class="header__submenu">-->
+<!--                        <ul>-->
+
+<!--                            <li class="header__list"><a href="ministries.html">Ministerios</a></li>-->
+<!--                            <li class="header__list"><a href="ministries-single.html">Detalle de Ministerios</a></li>-->
+
+<!--                        </ul>-->
+<!--                    </div>&lt;!&ndash; .header__submenu ends &ndash;&gt;-->
+<!--                </li>&lt;!&ndash; .header__list ends &ndash;&gt;-->
 
 <!--                <li class="header__list">-->
 <!--                    <a href="" class="dropdown-link">Eventos</a>-->
